adicionando ejs de contato

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,7 +3,7 @@
   <section class="sobre">
     <div class="container">
       <img
-        src="img/ilustra-city.png"
+        src="/img/ilustra-city.png"
         alt="Ilustração de pessoa passeando com um cachorro na cidade"
       />
       <div class="text">
