--- a/views/adm/servicos/index.ejs
+++ b/views/adm/servicos/index.ejs
@@ -2,8 +2,7 @@
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
   rel="stylesheet"
   integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-  crossorigin="anonymous"
-/>
+  crossorigin="anonymous"/>
 
 <%- include('../../partials/header') %>
 
@@ -32,8 +31,11 @@
               <td><%= servico.preco %></td>
               <td><%= servico.ativo ? 'Habilitado' : 'Desabilitado' %></td>
               <td>
-                <button type="button" class="btn btn-secondary">Editar</button>
-                <button type="button" class="btn btn-danger">Excluir</button>
+                <a href="/adm/servicos/<%= servico.id %>" type="button" class="btn btn-primary">Abrir</a>
+                <a href="/adm/servicos/<%= servico.id %>/editar" type="button" class="btn btn-secondary">Editar</a>
+                <form action="/adm/servicos/<%= servico.id %>?_method=DELETE" method="POST">
+                  <button type="submit" class="btn btn-danger">Excluir</button>
+                </form>
               </td>
             </tr>
           <% }) %> 
