enxugando estrutura das rotas e controllers

--- a/views/adm/servicos/editar.ejs
+++ b/views/adm/servicos/editar.ejs
@@ -24,7 +24,7 @@
         </div>
         <div class="mb-3">
           <label for="" class="form-label">Preço</label>
-          <input type="text" name="preço" value="<%= servico.preco %>"class="form-control" id="" />
+          <input type="text" name="preco" value="<%= servico.preco %>"class="form-control" id="" />
         </div>
         <div class="mb-3 form-check">
           <input name="ativo" <%= servico.ativo ? "checked" : ''%> type="checkbox" class="form-check-input"id="exampleCheck1"/>
@@ -32,7 +32,7 @@
         </div>
         <div class="mb-3">
           <textarea
-            name="descrição"
+            name="descricao"
             class="form-control"
             id=""
             cols="30"
