criando middleware de validação de usuário, dentro da rota de registro

--- a/views/home/about.ejs
+++ b/views/home/about.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/header') %>
+<%- include('../partials/header') %>
 <main>
   <section class="sobre">
     <div class="container">
@@ -57,4 +57,4 @@
   </section>
 </main>
 
-<%- include('./partials/footer') %>
+<%- include('../partials/footer') %>
