--- a/views/home/contato.ejs
+++ b/views/home/contato.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/header') %>
+<%- include('../partials/header') %>
 
 <main>
   <section class="contato">
@@ -38,5 +38,5 @@
   </section>
 </main>
 
-<%- include('./partials/footer') %>
+<%- include('../partials/footer') %>
 
