--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/header') %>
+<%- include('../partials/header') %>
     <main>
         <section class="banner">
             <div class="container">
@@ -45,4 +45,4 @@
             </div>
         </section>
     </main>
-    <%- include('./partials/footer') %>
+    <%- include('../partials/footer') %>
