--- a/views/home/servicos.ejs
+++ b/views/home/servicos.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/header') %>
+<%- include('../partials/header') %>
 
 <main>
   <section class="servicos-lista">
@@ -22,4 +22,4 @@
   </section>
 </main>
 
-<%- include('./partials/footer') %>
+<%- include('../partials/footer') %>
