--- a/views/adm/servicos/index.ejs
+++ b/views/adm/servicos/index.ejs
@@ -4,7 +4,7 @@
   integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
   crossorigin="anonymous"/>
 
-<%- include('../../partials/header') %>
+<%- include('../../partials/adm/header') %>
 
 <main>
   <section class="servicos-lista">
