--- a/views/adm/servicos/detalhes.ejs
+++ b/views/adm/servicos/detalhes.ejs
@@ -5,7 +5,7 @@
   crossorigin="anonymous"
 />
 
-<%- include('../../partials/header') %>
+<%- include('../../partials/adm/header') %>
 
 <main>
   <section class="servicos-lista">
