--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,6 +17,7 @@
         <nav>
           <ul>
             <li><a href="sobre">Sobre</a></li>
+            <li><a href="pets">Pets</a></li>
             <li><a href="servicos">Serviços</a></li>
             <li><a href="contato">Contato</a></li>
             <li><a href="login">Login</a></li>
